# argus-medrec

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
a2a_agent/: README.md
argus/: __init__.py  config.py  fhir_client.py  llm.py  logging_setup.py  rxnorm.py  schemas.py  server.py  sharp_context.py
argus/ml/: __init__.py  ddi_severity.py
argus/reference/: __init__.py  build_kb.py
argus/reference/data/: anticholinergic_burden.csv  beers_2023.csv  drug_interactions.csv  pregnancy_categories.csv  qtc_drugs.csv  renal_rules.csv  serotonergic_drugs.csv
argus/tools/: __init__.py  _common.py  check_interactions.py  generate_note.py  get_medications.py  reconcile.py  renal_check.py  screen_patterns.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  MARKETPLACE_LISTINGS.md  SAFETY.md  SUBMISSION_CHECKLIST.md
scripts/: fix_rxcuis.py  flush_rxnorm_cache.py  generate_synthea.sh  rank_synthea_bundles.py  sanitize_synthea_bundle.py  train_ddi_model.py  upload_to_prompt_opinion.py  verify_sharp.py
tests/: conftest.py  test_build_kb.py  test_common.py  test_renal_check_integration.py  test_schemas.py  test_server_capabilities.py  test_sharp_context.py
tests/fixtures/: patient_bundle.json
