[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus"
version = "0.1.0"
description = "Argus — Medication reconciliation and safety MCP server for the Agents Assemble hackathon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Rupesh Bharambe" },
]
keywords = ["mcp", "fhir", "healthcare", "agents", "a2a"]

dependencies = [
    # MCP framework
    "fastmcp>=2.3.0",
    # Web / transport
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    # Config + schemas
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # Logging
    "structlog>=24.1.0",
    # FHIR R4 models
    "fhir.resources>=7.1.0",
    # Reference KB
    "aiosqlite>=0.20.0",
    # LLM
    "google-generativeai>=0.7.0",
    # ML — kept optional-light; importable at runtime for inference
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    # Utilities
    "tenacity>=8.2.0",
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.24.0",
]

[project.scripts]
argus-server = "argus.server:main"
argus-build-kb = "argus.reference.build_kb:main"

[tool.hatch.build.targets.wheel]
packages = ["argus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TID"]
ignore = [
    "E501",    # long lines
    "A002",    # argument shadowing builtin (format/schema are MCP contract names)
    "N801",    # Warning_ intentionally named to avoid shadowing builtin
    "N818",    # exception naming convention
    "UP038",   # isinstance tuple syntax — keeps Python 3.10 compat posture
]

[tool.ruff.lint.per-file-ignores]
"argus/server.py" = ["A002"]
"tests/*" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
